--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,15 +1,15 @@
 test('Test Jsoner',
   executable('jsoner-test',
-    sources: ['jsoner-test.vala'] + libapi_base_sources,
-    dependencies: libapi_base_dependencies,
+    sources: ['jsoner-test.vala'] + sources,
+    dependencies: dependencies,
   )
 )
 
 if get_option('run_net_tests')
   test('Test SoupWrapper',
     executable('soup-wrapper-test',
-      sources: ['soup-wrapper-test.vala'] + libapi_base_sources,
-      dependencies: libapi_base_dependencies,
+      sources: ['soup-wrapper-test.vala'] + sources,
+      dependencies: dependencies,
     )
   )
 endif
